// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spm GetConfig: toMatchSnapshot() 1`] = `
Object {
  "host": "172.17.94.239",
  "port": 3000,
  "secret": "1q2w3e4r",
}
`;

exports[`Spm GetInstalledSpmPackageMap: toMatchSnapshot() 1`] = `Object {}`;

exports[`Spm GetSpmPackageConfig: toMatchSnapshot() 1`] = `
Object {
  "dependencies": Object {
    "bookPb": "0.0.0",
    "userPb": "2.0.0",
  },
  "name": "demo",
  "version": "0.0.0",
}
`;

exports[`Spm ReplaceStringInFile: toThrow() 1`] = `"ENOENT: no such file or directory, open 'E:\\\\data1\\\\www\\\\demo\\\\SASDN-PM\\\\demo\\\\spm_error.json'"`;

exports[`SpmPackageRequest GetRequestOption: toMatchSnapshot() 1`] = `
Object {
  "host": "172.17.94.239",
  "method": "post",
  "path": "/mock",
  "port": 3000,
}
`;
